csye6225-infra.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CSYE 6225 Spring 2022 Cloudformation template 
Parameters:
  VpcCidrBlock:
    Description: CIDR block
    Type: String
    Default: 10.0.0.0/26
  SubnetReOne:
    Description: Subnet Region 1
    Type: String
  SubnetReTwo:
    Description: Subnet Region 2
    Type: String
  SubnetReThree:
    Description: Subnet Region 3
    Type: String
  SubnetPrivateReOne:
    Description: Subnet Private Region 1
    Type: String
  SubnetPrivateReTwo:
    Description: Subnet Private Region 2
    Type: String
  SubnetPrivateReThree:
    Description: Subnet Private Region 3
    Type: String
  SubnetReOneName:
    Description: Subnet Region 1 Name
    Type: String
  SubnetReTwoName:
    Description: Subnet Region 2 Name
    Type: String
  SubnetReThreeName:
    Description: Subnet Region 3 Name
    Type: String
  SubnetPrivateReOneName:
    Description: Subnet Private Region 1 Name
    Type: String
  SubnetPrivateReTwoName:
    Description: Subnet Private Region 2 Name
    Type: String
  SubnetPrivateReThreeName:
    Description: Subnet Private Region 3 Name
    Type: String
  SubnetReOneCIDR:
    Description: Subnet Region 1 Cidr value
    Type: String
  SubnetReTwoCIDR:
    Description: Subnet Region 2 Cidr value
    Type: String
  SubnetReThreeCIDR:
    Description: Subnet Region 3 Cidr value
    Type: String
  SubnetPrivateReOneCIDR:
    Description: Subnet Private Region 1 Cidr value
    Type: String
  SubnetPrivateReTwoCIDR:
    Description: Subnet Private Region 2 Cidr value
    Type: String
  SubnetPrivateReThreeCIDR:
    Description: Subnet Private Region 3 Cidr value
    Type: String
  AMI:
    Description: "AMI for the webservice Instance"
    Type: String
  KeyName:
    Description: "Key Name for Instance"
    Type: String
  ProfileName:
    Default: dev
    Type: String
    Description: Profile to run 
  DBInstanceIdentifier:
    Description: "RDS - Instance identifier of db"
    Type: String
  DbUserName:
    Description: "DB username"
    Type: String
  DbPassword:
    Description: "DB Password"
    Type: String
  DbPort:
    Description: "DB port"
    Type: String
  DbName:
    Description: "DB Name"
    Type: String
  S3BucketName:
    Description: "Name of the S3 bucket"
    Type: String
  S3BucketRegion:
    Description: "S3 bucket Region"
    Type: String
  AwsAccessKey:
    Description: "AWS access Key"
    Type: String
  AwsSecretKey:
    Description: "AWS secret key"
    Type: String
  DNSName:
    Type: String
    Default: "prod.ashwinbalaji-dhandapani.xyz."
Resources:
  myVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  mySubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [0,!GetAZs '']
      CidrBlock: !Ref SubnetReOneCIDR
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: !Ref SubnetReOneName
  mySubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [1,!GetAZs '']
      CidrBlock: !Ref SubnetReTwoCIDR
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: !Ref SubnetReTwoName
  mySubnet3:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [2,!GetAZs '']
      CidrBlock: !Ref SubnetReThreeCIDR
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: !Ref SubnetReThreeName
  myPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [0,!GetAZs '']
      CidrBlock: !Ref SubnetPrivateReOneCIDR
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: !Ref SubnetPrivateReOneName
  myPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [1,!GetAZs '']
      CidrBlock: !Ref SubnetPrivateReTwoCIDR
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: !Ref SubnetPrivateReTwoName
  myPrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [2,!GetAZs '']
      CidrBlock: !Ref SubnetPrivateReThreeCIDR
      MapPublicIpOnLaunch: false
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: !Ref SubnetPrivateReThreeName
  myIG:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: Name
          Value: "IG-AWS-CLI"
  myCarrierRoute:
    Type: AWS::EC2::Route
    DependsOn: myIGVPCAss
    Properties:
      RouteTableId:
        Ref: myRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: myIG
  myRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: "RouteTable-AWS-CLI"
      VpcId:
        Ref: myVPC
  myPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: "Private-RouteTable-AWS-CLI"
      VpcId:
        Ref: myVPC
  myRTSubnetAss1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId:
        Ref: myRouteTable
      SubnetId: 
        Ref: mySubnet1
  myRTSubnetAss2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: 
        Ref: myRouteTable
      SubnetId: 
        Ref: mySubnet2
  myRTSubnetAss3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: 
        Ref: myRouteTable
      SubnetId: 
        Ref: mySubnet3
  myPrivateRTSubnetAss1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId:
        Ref: myPrivateRouteTable
      SubnetId: 
        Ref: myPrivateSubnet1
  myPrivateRTSubnetAss2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: 
        Ref: myPrivateRouteTable
      SubnetId: 
        Ref: myPrivateSubnet2
  myPrivateRTSubnetAss3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: 
        Ref: myPrivateRouteTable
      SubnetId: 
        Ref: myPrivateSubnet3
  myIGVPCAss:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId:
        Ref: myIG
      VpcId:
        Ref: myVPC
  csye6225LoadBalancerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group - Load Balancer Spring 2022
      GroupName: load balancer Group
      SecurityGroupIngress:
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0         
        FromPort: 80
        ToPort: 80
      - IpProtocol: tcp
        CidrIp: 0.0.0.0/0          
        FromPort: 443
        ToPort: 443
      VpcId: !Ref myVPC
  application:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Base Security Group
      SecurityGroupIngress:
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 22
           ToPort: 22
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 80
           ToPort: 80
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 443
           ToPort: 443
         - IpProtocol: tcp
           CidrIp: 0.0.0.0/0
           FromPort: 3000
           ToPort: 3000
      VpcId: !Ref myVPC
  DatabaseSecurityGroup:
    DependsOn:
     - myPrivateSubnet1
     - myPrivateSubnet2
     - myPrivateSubnet3
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Database access details
      SecurityGroupIngress: 
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: !Ref application
      Tags:
      - Key: Name
        Value: database
      VpcId: !Ref myVPC
  S3bucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: !Join
        - "."
        - - !Select
            - 0
            - !Split
              - "-"
              - !Select
                - 2
                - !Split
                  - "/"
                  - !Ref "AWS::StackId"
          - Ref: "ProfileName"
          - "dhandapani.ashwinbalaji"
      AccessControl: Private
      BucketEncryption: 
        ServerSideEncryptionConfiguration: 
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
        - Id: Rule for S3 bucket
          Prefix: S3 images
          Status: Enabled
          Transitions:
            - TransitionInDays: 30
              StorageClass: STANDARD_IA
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
    DeletionPolicy: Delete
  RDSDBParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Properties: 
      Description: mySQL Database for S3
      Family: mysql8.0
      Tags: 
        - Key: Name
          Value: mysqlRDSparameter
  RdsDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet Group for mySQL database
      SubnetIds: 
        - Ref: myPrivateSubnet1
        - Ref: myPrivateSubnet2
        - Ref: myPrivateSubnet3
  MySqlDbInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: csye6225
      MasterUsername: !Ref DbUserName
      MasterUserPassword: !Ref DbPassword
      Engine: mysql
      EngineVersion : 8.0.28
      DBInstanceClass: db.t3.micro
      DBSubnetGroupName: !Ref RdsDBSubnetGroup
      StorageType: gp2
      PubliclyAccessible: False
      AllocatedStorage: "20"
      VPCSecurityGroups:
            - !GetAtt "DatabaseSecurityGroup.GroupId"
            - !Ref DatabaseSecurityGroup
      DBInstanceIdentifier: "csye6225"
      MultiAZ: False
  RootRole:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: "EC2-CSYE6225"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
  DemoInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: demo-ec2-instance-profile
      Path: /
      Roles:
       - !Ref RootRole
  RolePolicies:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: S3CustomRole
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 's3:Put*'
              - 's3:Get*'
              - 's3:Delete*'
              - s3:GetObject
              - s3:PutObject
              - s3:DeleteObject
              - s3:PutObjectAcl
              - s3:ListMultipartUploadParts
              - s3:AbortMultipartUpload
              - ec2:RunInstances
              - ec2:AssociateIamInstanceProfile
              - ec2:ReplaceIamInstanceProfileAssociation
              - kms:Decrypt
              - kms:GenerateDataKey
              - s3:ListAllMyBuckets
            Resource:
              -  !Sub arn:aws:s3:::${S3bucket}
              -  !Sub arn:aws:s3:::${S3bucket}/*
      Roles:
        - Ref: RootRole
  AutoScalingLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref AMI
      IamInstanceProfile: !Ref DemoInstanceProfile
      InstanceType: "t2.micro"
      KeyName: !Ref KeyName
      BlockDeviceMappings: 
      - DeviceName: "/dev/sdm"
        Ebs: 
          VolumeType: "gp2"
          DeleteOnTermination: "false"
          VolumeSize: "20"
      AssociatePublicIpAddress: "true"
      SecurityGroups:
      - !Ref application
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo 'export DB_HOSTNAME=${MySqlDbInstance.Endpoint.Address}' >> /etc/environment
          echo 'export DB_USERNAME=${DbUserName}' >> /etc/environment
          echo 'export DB_PASSWORD=${DbPassword}' >> /etc/environment
          echo 'export DB_PORT=${DbPort}' >> /etc/environment
          echo 'export DB_NAME=${DbName}' >> /etc/environment
          echo 'export S3_BUCKET_NAME=${S3bucket}' >> /etc/environment
          echo 'export S3_BUCKET_REGION=${S3BucketRegion}' >> /etc/environment
          echo 'export AWS_ACCESS_KEY=${AwsAccessKey}' >> /etc/environment
          echo 'export AWS_SECRET_KEY=${AwsSecretKey}' >> /etc/environment
          source /etc/environment
          sudo su root
          sudo pm2 restart all --update-env
          sudo pm2 save
          sudo systemctl daemon-reload
          cd /home/ec2-user/node-app
          sudo systemctl start node-service.service
      LaunchConfigurationName: !Join
        - "."
        - - !Select
            - 0
            - !Split
              - "-"
              - !Select
                - 2
                - !Split
                  - "/"
                  - !Ref "AWS::StackId"
          - "asg_launch_config"
  AutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: '1'
      MaxSize: '5'
      DesiredCapacity: '1'
      LaunchConfigurationName: !Ref AutoScalingLaunchConfig
      VPCZoneIdentifier:
      - !Ref mySubnet1
      - !Ref mySubnet2
      - !Ref mySubnet3
      TargetGroupARNs:
      - !Ref TargetGroup
      Cooldown: 60
      Tags:
        - Key: Name
          Value: CSYE6225-CloudApplication-ASG
          PropagateAtLaunch: "true"
  csye6225LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Name: AppLoadBalancer
      Scheme: internet-facing
      Type: application
      Subnets:
      - !Ref mySubnet1
      - !Ref mySubnet2
      - !Ref mySubnet3
      SecurityGroups: 
      - !Ref csye6225LoadBalancerSecGroup
  CPUAlarmHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '1'
      Statistic: Average
      Threshold: '7'
      AlarmDescription: Scaling up -- CPU usage > 7%
      Period: '60'
      AlarmActions:
      - !Ref ScaleOutPolicy
      Namespace: AWS/EC2
      Dimensions:
      - Name: AutoScalingGroupName
        Value: !Ref AutoscalingGroup
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization
  CPUAlarmLow:
    Type: AWS::CloudWatch::Alarm
    Properties:
      EvaluationPeriods: '1'
      Statistic: Average
      Threshold: '4'
      AlarmDescription: Scale down if CPU < 4%
      Period: '60'
      AlarmActions:
      - !Ref ScaleOutPolicy
      Namespace: AWS/EC2
      Dimensions:
      - Name: AutoScalingGroupName
        Value: !Ref AutoscalingGroup
      ComparisonOperator: GreaterThanThreshold
      MetricName: CPUUtilization

  ScaleOutPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref AutoscalingGroup
      Cooldown: 60
      ScalingAdjustment: -1

  ScaleInPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref AutoscalingGroup
      Cooldown: 60
      ScalingAdjustment: 1

  TargetGroup:
    DependsOn: csye6225LoadBalancer
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /healthz
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 5
      HealthCheckPort: 3000
      HealthCheckProtocol: HTTP
      Name: AppLBTargetGroup
      Port: 3000
      Protocol: HTTP
      TargetType: instance
      VpcId: !Ref myVPC

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref csye6225LoadBalancer
      Port: 80
      Protocol: HTTP

  DNSRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      HostedZoneName: !Ref DNSName
      Comment: Zone apex alias targeted to LoadBalancer.
      RecordSets:
      - Name: !Ref DNSName
        Type: A
        AliasTarget:
          HostedZoneId: !GetAtt 'csye6225LoadBalancer.CanonicalHostedZoneID'
          DNSName: !GetAtt 'csye6225LoadBalancer.DNSName'
